# jni-rust-dtls

./: README.md  pubspec.yaml
lib/: main.dart
native/: :w  Cargo.toml  build.rs
native/.cargo/: config.toml
native/crts/: root_ca.pem
native/crts/client/: client-crt.pem  client-key.pem
native/crts/server/: srv-cert.pem  srv-key.pem
native/src/: bluetooth.rs  dtls_default.rs  lib.rs  udp_redirect.rs
protos/: bluetooth.proto  greeting.proto
