[package]
name = "native"
version = "0.0.1"
authors = ["Alastair Carey <alastair@alastaircarey.com>"]
edition = "2021"

[lib]
 name = "native"
 crate-type = ["staticlib", "cdylib"]

[dependencies]
bytes = "0.5.4"
protobuf = { version = "2.14.0", features = ["with-bytes"] }
num-traits = "0.2.12"
num-derive = "0.3.0"
log = "0.4.8"
env_logger = "^0.3.0"
tonic = "0.11"

prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
coap = { git = "https://github.com/covertness/coap-rs.git", branch = "master" }
tracing = "0.1.40"
tokio-util = {version = "0.7.10", features = ["net", "io", "io-util"]}
futures = "0.3.30"

webrtc-dtls = {version = "0.8.0"}
webrtc-util = {version = "0.8.0"}
rustls  = {version = "^0.21.1", features = ["tls12"]}
rustls-pemfile  = {version = "2.0.0"}
rcgen  = {version = "^0.11.0"}
pkcs8  = {version = "0.10.2"}
sec1 = { version = "0.7.3", features = ["pem", "pkcs8", "std"]}
coap-lite = "0.11.5"
ring = {version = "^0.16.0"}

[build-dependencies]
tonic-build = "0.11"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.8.6"
